syntax = "proto3";

import "akkaserverless/annotations.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package io.mystore.order.api;

option java_outer_classname = "OrderApi";

service OrderService {
  option (akkaserverless.codegen) = {
    event_sourced_entity: {
      name: "io.mystore.order.entity.Order"
      entity_type: "order"
      state: "io.mystore.order.entity.OrderState"
      events: [
        "io.mystore.order.entity.OrderCreated",
        "io.mystore.order.entity.OrderShipped",
        "io.mystore.order.entity.OrderDelivered",
        "io.mystore.order.entity.OrderReturned",
        "io.mystore.order.entity.OrderCancelled",
        "io.mystore.order.entity.OrderItemShipped"  //
      ]
    }
  };

  rpc CreateOrder(CreateOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/order/{order_id}/create"
      body: "*"
    };
  }

  rpc ShippedOrder(ShippedOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/order/{order_id}/shipped-order"
    };
  }

  rpc DeliveredOrder(DeliveredOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/order/{order_id}/delivered"
    };
  }

  rpc ReturnedOrder(ReturnedOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/order/{order_id}/returned"
    };
  }

  rpc CanceledOrder(CanceledOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/order/{order_id}/canceled"
    };
  }

  rpc ShippedOrderItem(ShippedOrderItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/order/{order_id}/shipped-order-item"
      body: "*"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (Order) {
    option (google.api.http) = {
      get: "/order/{order_id}"
    };
  }
}

message CreateOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  repeated OrderItem order_items = 4;
}

message ShippedOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
}

message ShippedOrderItemRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
  string sku_id = 2;
}

message DeliveredOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
}

message ReturnedOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
}

message CanceledOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
}

message GetOrderRequest {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
}

message Order {
  string order_id = 1 [(akkaserverless.field).entity_key = true];
  string customer_id = 2;
  google.protobuf.Timestamp ordered_utc = 3;
  google.protobuf.Timestamp shipped_utc = 4;
  google.protobuf.Timestamp delivered_utc = 5;
  google.protobuf.Timestamp returned_utc = 6;
  google.protobuf.Timestamp canceled_utc = 7;
  repeated OrderItem order_items = 8;
}

message OrderItem {
  string sku_id = 1;
  string sku_name = 2;
  int32 quantity = 3;
  google.protobuf.Timestamp shipped_utc = 4;
}
